# opendeck-akp815-plugin

./: .gitignore  40-opendeck-akp815.rules  Cargo.toml  README.md  com.artecom.akp815.streamDeckPlugin  install.sh  manifest.json  package.py  package.sh  plugin_contents.txt  plugin_status.txt  plugin_structure_check.txt  test.streamDeckPlugin
.serena/: project.yml
src/: main.rs
