[package]
name = "opendeck-akp815-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opendeck-akp815-plugin"
path = "src/main.rs"

# Plugin dependencies
[dependencies]
ajazz-sdk = { git = "https://github.com/mistweaverco/opendeck-ajazz" }
hidapi = "2.6.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
image = "0.25.9"
base64 = "0.22.1"
